[tool.poetry]
name = "lyric-project"
version = "0.1.0"
description = "Mock Implementations for Lyric presentation"
authors = ["alexjmeyer92 <alex.j.meyer15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ortools = "^9.10.4067"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
